--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:slnt,wght@-10..0,100..900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
 }
 
 :root {
+    --font-family-text: "Inter", "sans-serif";
+
     --cor-primaria: #0A3871;
     --cor-secundaria: #ffffff;
     --cor-terciaria:#D8DFE8;
@@ -15,6 +19,7 @@
 
 body {
     background-color: var(--cor-4);
+    font-family: var(--font-family-text)
 }
 
 header h1 {
@@ -40,9 +45,14 @@ header h1 {
     height: 45px;
 }
 
-#myText {
+#text {
     color: black;
     border: none;
+
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 48px;
+
     background-color: var(--cor-4)
 }
 
@@ -51,8 +61,11 @@ header h1 {
     height: 18px;
     display: flex;
     gap: 8px;
-
     margin-bottom: 16px;
+
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
 
     color: var(--cor-texto-2);
 }
@@ -75,6 +88,11 @@ header h1 {
     border: none;
     border-radius: 24px;
     padding: 24px;
+
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19.36px;
+
     border: 1px solid var(--cor-primaria);
 }
 
@@ -100,7 +118,7 @@ header h1 {
     justify-content: center;
 
     background-color: var(--cor-secundaria);
-   box-shadow: 5px 24px 32px 0px hsla(0, 0%, 0%, 0.082);
+    box-shadow: 5px 24px 32px 0px hsla(0, 0%, 0%, 0.082);
 }
 
 .conteudos .conteudo_2 img {
@@ -117,10 +135,16 @@ header h1 {
 
 .conteudos .conteudo_2 h2 {
     color: var(--cor-texto-1);
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
 }
 
 .conteudos .conteudo_2 p {
     color: var(--cor-texto-2);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
 }
 
 footer {
