--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 :root {
@@ -22,14 +23,21 @@ body {
     font-family: var(--font-family-text)
 }
 
+header {
+    padding: 0px 16px;
+}
+
 header h1 {
     color: var(--cor-primaria);
+    margin-left: 13%;
 }
 
 .conteudos {
     display: flex;
     justify-content: center;
-    gap: 40px;
+    gap: 80px;
+
+    padding-top: 32px;
 }
 
 .conteudos .conteudo_1 {
@@ -37,16 +45,18 @@ header h1 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    padding-top: 128px;
 }
 
 
 .conteudoss .conteudo_1 textarea {
-    width: 680px;
+    width: 100%;
     height: 45px;
 }
 
-#text {
-    color: black;
+#texto_entrada {
+    color: var(--cor-primaria);
     border: none;
 
     font-weight: 400;
@@ -54,6 +64,10 @@ header h1 {
     line-height: 48px;
 
     background-color: var(--cor-4)
+}
+
+#text:focus {
+    outline: none !important;
 }
 
 .conteudos .conteudo_1 .texto_informativo {
@@ -150,6 +164,9 @@ header h1 {
 footer {
     background-color: var(--cor-primaria);
     color: var(--cor-secundaria);
+    text-align: center;
+    padding: 12px;
+    margin-top: 32px;
 }
 
 footer a {
