--- a/styles/style.css
+++ b/styles/style.css
@@ -98,7 +98,7 @@ header h1 {
     border: none;
     border-radius: 24px;
     padding: 24px;
-
+    cursor: pointer;
     font-weight: 400;
     font-size: 16px;
     line-height: 19.36px;
