--- a/styles/style.css
+++ b/styles/style.css
@@ -60,6 +60,8 @@ header h1 {
     font-weight: 400;
     font-size: 32px;
     line-height: 48px;
+    width: 100%;
+    resize: none;
 }
 
 .text_area:focus {
@@ -141,6 +143,8 @@ header h1 {
 
 .conteudos #conteudo_2 #texto_saida {
     background-color: var(--cor-secundaria);
+    height: 100%;
+    margin-bottom: 16px;
 }
 
 .conteudos .conteudo_saida img {
